rotate overflow bug

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   height: 100%;
+  overflow: hidden;
 }
 .game-container {
   display: flex;
